# Universal-Service-Discovery-Protocol-USDP

./: .gitignore  LICENSE  README.md
local_agent/: README.md  pyproject.toml
local_agent/examples/: agent_config.example.json
local_agent/usdp_agent/: __init__.py  agent.py  builders.py  config.py  main.py  net.py  registry_client.py  state.py
local_agent/usdp_agent/plugins/: __init__.py  api_plugin.py  base.py  camera_plugin.py  printer_plugin.py  sensor_plugin.py
registry/: README.md  pyproject.toml
registry/usdp_registry/: __init__.py  auth.py  config.py  errors.py  federation.py  lifecycle.py  main.py  metrics.py  query.py  query_planner.py  rate_limit.py  server.py  storage.py  utils.py  validation.py
sdk_python/: README.md  pyproject.toml
sdk_python/usdp_sdk/: __init__.py  builders.py  client.py  config.py  errors.py  http.py  models.py  validation.py  validators.py
self_registration_client/: README.md  pyproject.toml
self_registration_client/usdp_client/: __init__.py  builders.py  client.py  config.py  errors.py  heartbeat.py  http.py  main.py
web_dashboard/: README.md  pyproject.toml
web_dashboard/usdp_dashboard/: __init__.py  config.py  main.py  server.py
web_dashboard/usdp_dashboard/static/: app.js  index.html  styles.css
