[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "usdp-registry"
version = "0.1.0"
description = "USDP phase-two registry backend core"
requires-python = ">=3.11"

[project.scripts]
usdp-registry = "usdp_registry.main:main"

[tool.setuptools]
packages = ["usdp_registry"]
