[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "usdp-web-dashboard"
version = "0.1.0"
description = "USDP v2 web dashboard"
requires-python = ">=3.11"

[project.scripts]
usdp-dashboard = "usdp_dashboard.main:main"

[tool.setuptools]
packages = ["usdp_dashboard"]

[tool.setuptools.package-data]
usdp_dashboard = ["static/*"]
